fixing header on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,8 @@ body {
 
 .hero-unit h1 {
 	padding-top: 0;
+	font-size: 32px;
+	margin-bottom: 30px;
 }
 
 @media all and (min-width: 450px) {
@@ -107,6 +109,8 @@ body {
 
 	.hero-unit h1 {
 		padding-top: 130px;
+		font-size: 36px;
+		margin-bottom: 50px;
 	}
 }
 
@@ -136,9 +140,7 @@ body {
 
 .hero-unit h1 {
 	color: rgba(256,256,256,0.95);
-	font-size: 36px;
 	font-weight: 300;
-	margin-bottom: 50px;
 	letter-spacing: 0.8px;
 	text-shadow: rgba(0, 0, 0, 1) 0px 1px 1px;
 }
